kanc/src/tests/sample_code/should_fail/single_file/bind/ref_let_in_body.k
type U {
    .u: U,
}

let plus = fun plus(a: U, b: U): U { U.u };

let a = plus(a, a);
